tests/sumo/output/e2/errors/id_missing/errors.sumo
Error: Attribute 'id' is missing in definition of a e2Detector.
Quitting (on error).
